--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6">
           <div class="team-member">
-            <img src="img/director.jpeg" alt>
+            <img src="img/director.png" alt>
             <div class="member-info">
               <h2>Obinna Nwanma</h2>
               <p>Managing Director</p>
@@ -239,7 +239,7 @@
         </div>
         <div class="col-lg-6 col-md-6">
           <div class="team-member">
-            <img src="img/mike.jpg" alt>
+            <img src="img/mike01.png" alt>
             <div class="member-info">
               <h2>Bar. Mike Epelle</h2>
               <p>Chief Executive</p>
@@ -253,7 +253,7 @@
   <section class="team-section spad">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-6">
           <div class="team-member">
             <img src="img/kene.jpg" alt>
             <div class="member-info">
@@ -262,12 +262,21 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-4 col-md-6">
           <div class="team-member">
             <img src="img/ud-director.jpeg" alt>
             <div class="member-info">
               <h2>Udochukwu Nwanma</h2>
               <p>Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="team-member">
+            <img src="img/Okpokiti.jpeg" alt>
+            <div class="member-info">
+              <h2>Edisemi Okpokiti</h2>
+              <p>Board Member</p>
             </div>
           </div>
         </div>
