--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
                 <img src="img/icon/dark/6.png" alt>
               </div>
             </div>
-            <h3>And many more</h3>
+            <h3>Pump Services</h3>
+            <p> Maximize uptime and maintain peak performance with our expert pump services. 
+              We understand the critical nature of accurate and efficient operations. 
+              Our comprehensive services ensure you have the right solutions to minimize downtime and guarantee uncompromised performance from your pumping systems. 
+              Trust us for reliable service that keeps your operations flowing smoothly.</p>
           </div>
         </div>
       </div>
@@ -315,6 +319,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="hse.html">HSE Policy</a></li>
                   <li><a href="contact.html">Contact us</a></li>
                 </ul>
               </div>
