--- a/service.html
+++ b/service.html
@@ -136,8 +136,11 @@
                 <img src="img/icon/dark/6.png" alt>
               </div>
             </div>
-            <h3>and many more</h3>
-            <p></p>
+            <h3>Pumps services</h3>
+            <p> Maximize uptime and maintain peak performance with our expert pump services. 
+              We understand the critical nature of accurate and efficient operations. 
+              Our comprehensive services ensure you have the right solutions to minimize downtime and guarantee uncompromised performance from your pumping systems. 
+              Trust us for reliable service that keeps your operations flowing smoothly.</p>
             
           </div>
         </div>
@@ -170,7 +173,7 @@
 
             <p>We only employ people with the right skill set, experience, and attitude to guide Ceone towards best practices in HSE. 
               We continue to take significant steps forward and achieve consistent HSE performance outcomes—this is due in part to our stringent recruitment screening process but also our desire to make a difference where it counts. </p>
-          
+              <a href="hse.html" class="site-btn sb-dark">HSE Policy</a>
         </div>
       </div>
     </div>
@@ -258,6 +261,7 @@
             <div class="col-md-4">
               <div class="footer-item">
                 <ul>
+                  <li><a href="hse.html">HSE Policy</a></li>
                   <li><a href="contact.html">Contact us</a></li>
                 </ul>
               </div>
