--- a/index.html
+++ b/index.html
@@ -185,6 +185,34 @@
               Trust us for reliable service that keeps your operations flowing smoothly.</p>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-box">
+            <div class="sb-icon">
+              <div class="sb-img-icon">
+                <img src="img/icon/dark/5.png" alt>
+              </div>
+            </div>
+            <h3>Slickline services:</h3>
+            <p> Slickline services are a cost-effective and efficient method of well intervention used in the oil and gas industry. 
+              Unlike wireline services that use an electrical cable, slickline utilizes a single, solid steel wire to deploy and 
+              retrieve various tools and perform mechanical tasks within the wellbore while maintaining pressure control.</p>
+            
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-box">
+            <div class="sb-icon">
+              <div class="sb-img-icon">
+                <img src="img/icon/dark/5.png" alt>
+              </div>
+            </div>
+            <h3>E-line services:</h3>
+            <p> In the oil and gas industry, refer to well intervention operations that utilize an electric wireline 
+              cable to deploy tools and transmit power and data downhole. Unlike slickline, 
+              which uses a solid mechanical wire, e-line incorporates electrical conductors within the cable.</p>
+            
+          </div>
+        </div>
       </div>
     </div>
   </section>
